EDG-732: Wire the v2 protocol-adapter subsystem side by side with the legacy framework (#1584)